--- a/app/src/main/res/layout/activity_simple_alarm.xml
+++ b/app/src/main/res/layout/activity_simple_alarm.xml
@@ -20,11 +20,11 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/element_spacing_large"
-            android:paddingBottom="@dimen/element_spacing_xxxlarge"
             android:clickable="true"
             android:focusable="true"
             android:focusableInTouchMode="true"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:paddingBottom="@dimen/element_spacing_xxxlarge">
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/alarmName_editTextLayout"
@@ -54,54 +54,57 @@
                 android:gravity="center"
                 android:orientation="horizontal">
 
-                <TextView
+                <com.yy.mobile.rollingtextview.RollingTextView
                     android:id="@+id/plusHourText"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/nanumgothicextrabold"
-                    android:text="00"
+                    android:text="@string/alarmSet_default_time"
                     android:textColor="@color/white"
-                    app:layout_constraintTop_toTopOf="parent"
+                    android:textSize="@dimen/text_h2"
+                    android:textStyle="bold"
+                    app:duration="500"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toStartOf="@id/timeSplit"
-                    android:textSize="@dimen/text_h2" />
+                    app:layout_constraintTop_toTopOf="parent" />
 
                 <TextView
                     android:id="@+id/timeSplit"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/nanumgothicextrabold"
-                    android:text="@string/time_split"
                     android:paddingHorizontal="@dimen/element_spacing_large"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintBottom_toBottomOf="parent"
+                    android:text="@string/time_split"
                     android:textColor="@color/white"
-                    android:textSize="@dimen/text_h2" />
+                    android:textSize="@dimen/text_h2"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
 
-                <TextView
+                <com.yy.mobile.rollingtextview.RollingTextView
                     android:id="@+id/plusMinText"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    app:layout_constraintStart_toEndOf="@id/timeSplit"
                     android:fontFamily="@font/nanumgothicextrabold"
-                    android:text="00"
-                    app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintBottom_toBottomOf="parent"
+                    android:text="@string/alarmSet_default_time"
                     android:textColor="@color/white"
-                    android:textSize="@dimen/text_h2" />
+                    android:textSize="@dimen/text_h2"
+                    android:textStyle="bold"
+                    app:duration="500"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toEndOf="@id/timeSplit"
+                    app:layout_constraintTop_toTopOf="parent" />
 
                 <ImageView
                     android:id="@+id/reset_counter"
                     android:layout_width="@dimen/alarmSet_refresh_diameter"
                     android:layout_height="@dimen/alarmSet_refresh_diameter"
-                    android:src="@drawable/ic_refresh_24"
-                    app:tint="@color/white"
                     android:layout_marginEnd="@dimen/element_spacing_small"
+                    android:src="@drawable/ic_refresh_24"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    />
+                    app:tint="@color/white" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -118,9 +121,9 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginTop="@dimen/element_spacing_xnormal"
-                android:paddingTop="@dimen/element_spacing_normal"
                 android:background="@drawable/button_background_upper"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:paddingTop="@dimen/element_spacing_normal">
 
                 <com.google.android.material.button.MaterialButton
                     android:id="@+id/min60_Button"
@@ -166,11 +169,11 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:paddingTop="@dimen/element_spacing_small"
-                android:paddingBottom="@dimen/element_spacing_normal"
                 android:layout_marginBottom="@dimen/element_spacing_xlarge"
                 android:background="@drawable/button_background_under"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:paddingTop="@dimen/element_spacing_small"
+                android:paddingBottom="@dimen/element_spacing_normal">
 
                 <com.google.android.material.button.MaterialButton
                     android:id="@+id/min10_Button"
@@ -266,11 +269,11 @@
                     app:fb_cornerRadius="@dimen/fitButton_corner_radius"
                     app:fb_divColor="#fff"
                     app:fb_divHeight="@dimen/fitButton_div_height"
+                    app:fb_divMarginStart="10dp"
                     app:fb_divWidth="@dimen/fitButton_div_width"
                     app:fb_icon="@drawable/ic_baseline_music"
                     app:fb_iconColor="#FFF"
                     app:fb_iconHeight="@dimen/fitButton_icon_height"
-                    app:fb_divMarginStart="10dp"
                     app:fb_iconMarginEnd="@dimen/fitButton_icon_margin_end"
                     app:fb_iconMarginStart="@dimen/fibButton_icon_margin_start"
                     app:fb_iconPosition="left"
@@ -279,8 +282,8 @@
                     app:fb_shape="rectangle"
                     app:fb_text="@string/alarmSet_selectBell"
                     app:fb_textColor="#FFF"
-                    app:fb_textPaddingStart="@dimen/element_spacing_xnormal"
-                    app:fb_textPaddingEnd="@dimen/element_spacing_xnormal"/>
+                    app:fb_textPaddingEnd="@dimen/element_spacing_xnormal"
+                    app:fb_textPaddingStart="@dimen/element_spacing_xnormal" />
 
                 <com.github.nikartm.button.FitButton
                     android:id="@+id/selectMode_button"
@@ -294,11 +297,11 @@
                     app:fb_cornerRadius="@dimen/fitButton_corner_radius"
                     app:fb_divColor="#fff"
                     app:fb_divHeight="@dimen/fitButton_div_height"
+                    app:fb_divMarginStart="8dp"
                     app:fb_divWidth="@dimen/fitButton_div_width"
                     app:fb_icon="@drawable/calculator"
                     app:fb_iconColor="#FFF"
                     app:fb_iconHeight="@dimen/fitButton_icon_height"
-                    app:fb_divMarginStart="8dp"
                     app:fb_iconMarginEnd="@dimen/fitButton_icon_margin_end"
                     app:fb_iconMarginStart="@dimen/fibButton_icon_margin_start"
                     app:fb_iconPosition="left"
@@ -307,8 +310,8 @@
                     app:fb_shape="rectangle"
                     app:fb_text="@string/alarmSet_selectMode"
                     app:fb_textColor="#FFF"
-                    app:fb_textPaddingStart="@dimen/element_spacing_xnormal"
-                    app:fb_textPaddingEnd="@dimen/element_spacing_xnormal"/>
+                    app:fb_textPaddingEnd="@dimen/element_spacing_xnormal"
+                    app:fb_textPaddingStart="@dimen/element_spacing_xnormal" />
             </LinearLayout>
 
             <LinearLayout
