Setting에 QuickAlarm Mute 설정 기능 추가

--- a/app/src/main/res/layout/setting_item.xml
+++ b/app/src/main/res/layout/setting_item.xml
@@ -84,7 +84,7 @@
                     android:layout_weight="1"
                     android:gravity="center_vertical"
                     android:text="@{settingDetail}"
-                    android:textColor="@color/sub_item_text_color"
+                    android:textColor="@color/deep_yellow"
                     app:visible="@{!TextUtils.isEmpty(settingDetail)}"
                     tools:text="Setting description" />
             </LinearLayout>
