알람이 울릴 때 설정한 알람 이름도 같이 표시되게 하기 및 알람 이름 버그 수정 1. 알람 이름 설정이 다른 뷰 클릭에 따라 제대로 되지 않는 버그 수정 2. 알람이 울릴 때 설정한 알람 이름도 같이 표시되게 수정

--- a/app/src/main/res/layout/activity_normal_alarm.xml
+++ b/app/src/main/res/layout/activity_normal_alarm.xml
@@ -51,6 +51,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@android:color/transparent"
+                    android:imeOptions="actionDone"
                     android:inputType="text"
                     android:maxLines="1"
                     android:text="@{alarmData.name}"
@@ -310,8 +311,8 @@
                     app:fb_shape="rectangle"
                     app:fb_text="@string/alarmSet_selectBell"
                     app:fb_textColor="#FFF"
-                    app:fb_textPaddingStart="@dimen/element_spacing_xnormal"
-                    app:fb_textPaddingEnd="@dimen/element_spacing_xnormal" />
+                    app:fb_textPaddingEnd="@dimen/element_spacing_xnormal"
+                    app:fb_textPaddingStart="@dimen/element_spacing_xnormal" />
 
                 <com.github.nikartm.button.FitButton
                     android:id="@+id/selectMode_button"
@@ -337,8 +338,8 @@
                     app:fb_shape="rectangle"
                     app:fb_text="@string/alarmSet_selectMode"
                     app:fb_textColor="#FFF"
-                    app:fb_textPaddingStart="@dimen/element_spacing_xnormal"
-                    app:fb_textPaddingEnd="@dimen/element_spacing_xnormal" />
+                    app:fb_textPaddingEnd="@dimen/element_spacing_xnormal"
+                    app:fb_textPaddingStart="@dimen/element_spacing_xnormal" />
             </LinearLayout>
 
             <LinearLayout
