--- a/app/src/main/res/layout/activity_simple_alarm.xml
+++ b/app/src/main/res/layout/activity_simple_alarm.xml
@@ -41,6 +41,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@android:color/transparent"
+                    android:imeOptions="actionDone"
                     android:inputType="text"
                     android:maxLines="1"
                     android:textColor="@color/white" />
