일반 알람인데도 계산 문제가 나오는 버그 수정 1. onAlarm의 레이아웃 치수 수정

--- a/app/src/main/res/layout/activity_on_alarm.xml
+++ b/app/src/main/res/layout/activity_on_alarm.xml
@@ -34,13 +34,13 @@
                 android:id="@+id/alarm_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintBottom_toTopOf="@id/min"
+                android:text="Alarm name"
                 android:textColor="@color/deep_yellow"
                 android:textSize="@dimen/text_p1"
-                android:text="Alarm name" />
+                app:layout_constraintBottom_toTopOf="@id/min"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <com.yy.mobile.rollingtextview.RollingTextView
                 android:id="@+id/min"
@@ -97,14 +97,15 @@
             android:layout_height="wrap_content"
             android:layout_weight="0.5"
             android:gravity="center"
+            android:visibility="@{showCalculatorProblem ? View.VISIBLE : View.GONE}"
             android:orientation="vertical"
             android:paddingHorizontal="@dimen/element_spacing_xxxlarge"
-            android:paddingTop="@dimen/element_spacing_large">
+            android:paddingTop="@dimen/element_spacing_xsmall">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/element_spacing_super_large"
+                android:layout_marginBottom="@dimen/element_spacing_xxlarge"
                 android:gravity="center"
                 android:orientation="horizontal">
 
@@ -371,8 +372,9 @@
             android:id="@+id/button_container"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_weight="0.7"
             android:paddingTop="@dimen/element_spacing_xnormal"
-            android:layout_weight="1.2">
+            app:setMarginTop="@{showCalculatorProblem ? @dimen/element_spacing_none : @dimen/element_spacing_super_ultra_large}">
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/ten_minutes"
