--- a/app/src/main/res/layout/spacer_item.xml
+++ b/app/src/main/res/layout/spacer_item.xml
@@ -2,6 +2,8 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android">
     <View
         android:id="@+id/spacer"
-        android:layout_width="0dp"
-        android:layout_height="0dp"/>
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:layout_marginHorizontal="@dimen/element_spacing_xlarge"
+        android:background="@color/sub_item_background"/>
 </layout>
