--- a/app/src/main/res/layout/fragment_user_guide.xml
+++ b/app/src/main/res/layout/fragment_user_guide.xml
@@ -3,13 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    tools:context=".ui.dialog.UserGuideFragment">
+    android:background="@color/background"
+    tools:context=".ui.dialog.UserGuideBottomDialogFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/user_guide_recycler"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:textSize="20sp"
-        android:text="@string/hello_blank_fragment" />
-
+        android:layout_height="match_parent" />
 </FrameLayout>
