--- a/app/src/main/res/layout/fragment_user_guide.xml
+++ b/app/src/main/res/layout/fragment_user_guide.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/background"
+    android:background="@drawable/background_upper_round"
     tools:context=".ui.dialog.UserGuideBottomDialogFragment">
 
 
@@ -11,4 +11,4 @@
         android:id="@+id/user_guide_recycler"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
-</FrameLayout>
+</androidx.appcompat.widget.LinearLayoutCompat>
